fixed bug cover text no longer covers navbar menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,8 @@
     background: #0082e6;
     height: 80px;
     width: 100%;
+    z-index: 1000;
+    position: relative;
   }
   label.logo{
     color: white;
